--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-
-<div ng-app>
-Write something here:
-<input type="text" ng-model="sometext">
-
-Write website link here:
-<input type="text" ng-model="websiteLink">
-
-<h1> Hello {{ sometext }}</h1>
-<a ng-href={{websiteLink}} >Google</a>
-</div>
+<html ng-app="batmanCharacters">
+    <head>
+        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js'></script>
+        <script src='charactersController.js'></script>
+    </head>
+    <body>
+        <div ng-controller="charactersController">
+            <ul>
+                <li ng-repeat="character in characters"> {{ character }} </li>
+            </ul>
+        </div>
+    </body>
+</html>
